[tool.poetry]
name = "phishingfeed"
version = "0.1.0"
description = "gather the phishing url"
authors = ["mert <mert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.1"
aiohttp = "3.8.4"
requests = "2.31.0"
dynaconf = "3.2.0"
fastapi = "0.100.0"
uvicorn = "0.22.0"
sqlalchemy = "1.4.29"
apscheduler = "3.10.1"
pandas = "2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
